# code-to-cv

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
app/: __init__.py  exceptions.py  main.py  mixins.py  models.py  repos.py
app/admin/: views.py
app/admin_panel/: auth.py  views.py
app/alembic/: env.py
app/core/: config.py  database.py
app/cvs/: __init__.py  dependencies.py  exceptions.py  models.py  repos.py  routers.py  schemas.py  services.py
app/cvs/utils/: fetch_data_from_github.py  (+1 more)
app/users/: __init__.py  dependencies.py  exceptions.py  models.py  repos.py  routers.py  schemas.py  services.py
docker_compose/: app.yaml  application.yaml  redis.yaml
src/: __init__.py  config.py  database.py  main.py  mixins.py  models.py  repositories.py  schemas.py  utils.py
src/admin_panel/: security.py  views.py
src/alembic/: env.py
src/categories/: __init__.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/cv/: __init__.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/cvs/: __init__.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/interview_questions/: __init__.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/interview_simulations/: __init__.py  models.py  repositories.py  routers.py  services.py
src/users/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  security.py  services.py  utils.py
templates/cv/: main.html
templates/cvs/: prompt.py
(+20 files in other folders)
